<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>
    <string name="act_main_windowname_hint">Ligth name</string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>
    <string name="windows">Windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="room_name">Room name</string>
    <string name="current_temperature">Current temp</string>
    <string name="target_temperature">Target temp</string>
    <string name="window_status">Window Status</string>
    <string name="window_name">Window Name</string>
    <string name="building_id">Building ID</string>
    <string name="room_id">Room ID</string>
    <string name="rooms">Rooms</string>
    <string name="heaters">Heaters</string>
    <string name="heater_status">Heater Status</string>
    <string name="heater_name">Heater Name</string>
    <string name="heater_power">Heater Power</string>
    <string name="heater_id">Heater ID</string>
    <string name="heater_room_id">Heater Room Id</string>
    <string name="building_name">Building Name</string>
    <string name="building_address">Building Address</string>
    <string name="building_zipcode">Building ZipCode</string>
    <string name="building_city">building City</string>
    <string name="buildings">Buildings</string>
    <string name="about">About</string>

</resources>