<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_heater_current_temp"
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="212dp"
        android:gravity="center"
        android:hint="@string/current_temperature"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_hater_status"
        android:layout_width="83dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:hint="@string/heater_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_heater_id"
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/heater_id"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <TextView
        android:id="@+id/txt_heater_target_temp"
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/target_temperature"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <TextView
        android:id="@+id/txt_heater_room_id"
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:hint="@string/heater_room_id"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_heater_model"
        android:layout_width="78dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/heater_name"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>