<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_buildings_id"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:hint="@string/building_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/txt_building_name"
        android:layout_width="254dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/building_name"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_building_address"
        android:layout_width="254dp"
        android:layout_height="21dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:hint="@string/building_address"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_building_zip_code"
        android:layout_width="115dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/building_zipcode"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/txt_building_city"
        android:layout_width="115dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/building_city"
        android:textColorHint="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

</androidx.constraintlayout.widget.ConstraintLayout>